<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_16"
    tools:context=".ObservablesActivity">

    <Button
        android:id="@+id/button_observable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_label_observable" />

    <Button
        android:id="@+id/button_flowable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_label_flowable" />

    <Button
        android:id="@+id/button_single"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_label_single" />

    <Button
        android:id="@+id/button_maybe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_label_maybe" />

    <Button
        android:id="@+id/button_completable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_label_completable" />

</LinearLayout>